--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
         "equip/framework": "^1.0",
         "josegonzalez/dotenv": "^1.2"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^4.8|^5.0"
+    },
     "autoload": {
         "psr-4": {
             "WordCloud\\": "src/"
